<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClickerViewPager</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_clicker">clicker</string>
    <string name="hint_message">请输入您的问题</string>
    <string name="idTV">UserID</string>
    <string name="hint_id">您的学号</string>
    <string name="hint_password">密码</string>
    <string name="remLogStr">自动登录</string>
    <string name="remCodeStr">记住学号和密码</string>
	<string name="desc">image of the listview</string>
	<string name="oldPassword">原来密码</string>
	<string name="newPassword">现在密码</string>
	<string name="confirmPassword">确认密码</string>
	<string name="hint_ip">IP 地址</string>

</resources>