<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dip"
        android:layout_marginLeft="30dip"
        android:background="@drawable/content_bg1" />
        
    <RelativeLayout
        android:id="@+id/editID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/content_bg2">
        <EditText 
            android:id="@+id/idET"
        	android:layout_width="match_parent"
            android:layout_height="48.0dip"
            android:layout_marginLeft="30dip"
        	android:layout_marginRight="30dip"
        	android:layout_marginBottom="10dip"
            android:textSize="16.0sp"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            android:textColorHint="#ff666666"
            android:paddingLeft="48.0dip"
            android:hint="@string/hint_id" 
            android:maxLines="1" 
            android:maxLength="16"     
            android:inputType="number"
            android:background="@drawable/loginpassword" />
        	<!-- <View android:background="#ffc0c3c4" 
            	android:layout_width="match_parent" 
            	android:layout_height="1.0px" 
            	android:layout_marginLeft="1.0px" 
            	android:layout_marginRight="1.0px" /> -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/idET"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="15dip"
            android:background="@drawable/loginicon" />
        <EditText 
        	android:id="@+id/passwordET"
        	android:layout_width="match_parent" 
            android:layout_height="48.0dip"
            android:layout_marginLeft="30dp"
        	android:layout_marginRight="30dp" 
            android:layout_below="@id/idET"
            android:textSize="16.0sp" 
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@null"
            android:textColorHint="#ff666666"
			android:paddingLeft="48.0dip" 
            android:hint="@string/hint_password" 
            android:maxLines="1" 
            android:maxLength="16" 
            android:inputType="textPassword"
            android:background="@drawable/loginpassword" />
        <ImageView
        	android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/passwordET"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="73dip"
            android:background="@drawable/passwordicon" />
        	
        <CheckBox
        	android:id="@+id/remLog"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="30dip"
        	android:layout_below="@id/imageView1"
        	android:layout_marginTop="30dip"
        	android:checked="false"
        	android:drawablePadding="4.0dip"
        	android:text="@string/remLogStr"
        	android:textColor="#ffffffff"
        	android:textSize="12.0sp" />

        <CheckBox 
        	android:id="@+id/remCode" 
        	android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_alignParentLeft="true" 
            android:layout_below="@id/remLog" 
            android:textSize="12.0sp" 
            android:textColor="#ffffffff" 
            android:checked="false" 
            android:text="@string/remCodeStr" 
            android:drawablePadding="4.0dip" />
        	
        <RelativeLayout
    	    android:id="@+id/groupB"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:gravity="center_horizontal"
    	    android:layout_below="@id/remCode">
    	    <Button
    	    	android:id="@+id/loginB"
    	    	android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="12.0dip"
        		android:background="@drawable/loginbuttonsel" />
    		<Button
    		    android:id="@+id/cancelB"
    			android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_marginTop="12.0dip"
        		android:layout_toRightOf="@id/loginB"
        		android:background="@drawable/clearbuttonsel" />
    	</RelativeLayout>
    	<!-- <Button
            android:id="@+id/anonyLoginB"
        	android:layout_centerHorizontal="true"
        	android:background="@drawable/niminglogin"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="12.0dip"
        	android:layout_below="@id/groupB" /> -->
    		
    </RelativeLayout>
    
</RelativeLayout>