<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/passwordfragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/background">
    <RelativeLayout 
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dip"
        android:layout_marginLeft="50dip"
        android:gravity="center"
        android:background="@drawable/base1">
        
        <EditText
        	android:id="@+id/oldPassword"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="50dip"
        	android:layout_marginRight="30dip"
        	android:layout_marginLeft="30dip"
        	android:layout_marginBottom="10dip"
        	android:textColor="#FFFFFF"
        	android:textCursorDrawable="@null"
        	android:hint="@string/oldPassword"
            android:textColorHint="#ff666666"
        	android:background="@drawable/loginpassword"
        	android:paddingLeft="42.0dip" 
        	android:paddingTop="10dip"
        	android:paddingBottom="10dip"
        	android:inputType="textPassword" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/oldPassword"
            android:layout_alignTop="@id/oldPassword"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="18dip"
            android:background="@drawable/passwordicon" />
        	
        <EditText
         	android:id="@+id/newPassword"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="30dip"
        	android:layout_marginLeft="30dip"
        	android:layout_marginBottom="10dip"
         	android:layout_below="@id/oldPassword"
         	android:textColor="#FFFFFF"
         	android:textCursorDrawable="@null"
         	android:hint="@string/newPassword"
            android:textColorHint="#ff666666"
         	android:background="@drawable/loginpassword"
         	android:paddingLeft="42.0dip" 
         	android:paddingTop="10dip"
        	android:paddingBottom="10dip"
         	android:inputType="textPassword" />
        	<!-- <View android:background="#ffc0c3c4" 
            	android:layout_width="match_parent" 
            	android:layout_height="1.0px" 
            	android:layout_marginLeft="1.0px" 
            	android:layout_marginRight="1.0px" /> -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/newPassword"
            android:layout_alignTop="@id/newPassword"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="18dip"
            android:background="@drawable/passwordicon" />
        	
        <EditText
         	android:id="@+id/confirmPassword"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:layout_marginRight="30dip"
        	android:layout_marginLeft="30dip"
        	android:layout_marginBottom="10dip"
         	android:layout_below="@id/newPassword"
         	android:textColor="#FFFFFF"
         	android:textCursorDrawable="@null"
         	android:hint="@string/confirmPassword"
            android:textColorHint="#ff666666"
         	android:background="@drawable/loginpassword"
         	android:paddingLeft="42.0dip"
         	android:paddingTop="10dip"
        	android:paddingBottom="10dip"
         	android:inputType="textPassword" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/confirmPassword"
            android:layout_alignTop="@id/confirmPassword"
            android:layout_marginLeft="18dip"
            android:layout_marginTop="18dip"
            android:background="@drawable/passwordicon" />
        
        <Button 
            android:id="@+id/passwordB"        	
            android:layout_below="@id/confirmPassword"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="20dip"
        	android:background="@drawable/confirmsel"
        	android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dip"
            android:layout_marginLeft="50dip"
			android:layout_below="@id/relativeLayout1"
            android:background="@drawable/base2" />
    
</RelativeLayout>
